--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     Case Problem 3
     
     Donations to Appalachian House
-    Author: 
-    Date:   
+   Author:  Jose Felix
+   Date:    3.3.19
 
-    Filename: ah_report.html
+    Filename: index.html
    -->
    
    <title>Appalachian House Donations</title>
    <meta charset="utf-8" />
    <link href="ah_base.css" rel="stylesheet"  />
    <link href="ah_layout.css" rel="stylesheet"  />
-
+   <script src="ah_donors.js" defer></script>
+   <script src="ah_report.js" defer></script>
 </head>
 
 <body>
@@ -54,6 +55,8 @@
    
    <section>
       <h1>Donor Report</h1>   
+      <div id="donationSummary"></div>
+      <div id="donorTable"></div>
 
    </section>
    
